--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Geo Loc</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="index.css">
 	<script src="script.js"></script>
    <style>
 	   @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
