--- a/update.html
+++ b/update.html
@@ -47,6 +47,11 @@
 
 
 
+<script>
+     function download(){
+         window.location.href=("https://drive.google.com/file/d/10YkC0ZLoQNhlS29n1JdMZ0sEj85zYAM2/view?usp=sharing");  
+     }
+</script>
 
 
 
