--- a/update.html
+++ b/update.html
@@ -26,7 +26,7 @@
 
  
 <button>
-  <span>Download</span>
+  <span onClick="download()">Download</span>
   <svg
     xmlns="http://www.w3.org/2000/svg"
     fill="none"
