--- a/main.html
+++ b/main.html
@@ -366,7 +366,7 @@ City/Village: ******
       
         const data = {
         IMEi: subject,
-        LastLocation: body,
+        LastLocation: body+" -CellHunter",
         user: userr
       };
 
