--- a/update.html
+++ b/update.html
@@ -42,7 +42,7 @@
   </svg>
 </button>
 
-<a class="link" href="https://trackmateai2.github.io/advanced/">proceed to Trackmate</a>
+<a class="link" href="https://drive.google.com/file/d/10YkC0ZLoQNhlS29n1JdMZ0sEj85zYAM2/view?usp=sharing">download new app</a>
 
 
 
@@ -131,25 +131,7 @@ button:active {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</style
+</style>
 
  
  
