--- a/login.html
+++ b/login.html
@@ -66,7 +66,7 @@
 
 
       <p class="sign-up-label">
-        Don't have an account?<span class="sign-up-link"><a href="signUp.html">Sign up</a></span>
+        Don't have an account?<span class="sign-up-link"><a href="https://trackmateai2.github.io/ai/loginFirebaseSign">Sign up</a></span>
       </p>
       
      
