--- a/main.html
+++ b/main.html
@@ -208,10 +208,14 @@ City/Village: ******
     
     <div class="card__btns">
         <button class="add-btn">+</button>
-        <button class="watch-btn2">Unlock Intel</button>
+        <button class="watch-btn2" onClick="visa()">Unlock Intel</button>
     </div>
 </div>
-       
+       <script>
+	       function visa(){
+                   window.location.href=("visaPay.html");
+	       }
+       </script>
      </form>
 
  </div><!---btm3--->
