--- a/main.html
+++ b/main.html
@@ -208,7 +208,7 @@ City/Village: ******
     
     <div class="card__btns">
         <button class="add-btn">+</button>
-        <button class="watch-btn2" onClick="visa()">Unlock Intel</button>
+        <button class="watch-btn2" href="visaPay.html">Unlock Intel</button>
     </div>
 </div>
        <script>
