--- a/loginSign.html
+++ b/loginSign.html
@@ -17,7 +17,7 @@
 
 
 
-          <image class="illust" src="Img/hunter1.png"></image>
+          <image class="illust" src="Img/logo.png"></image>
           <p class="exp">Fill form to create an account</p>
 
 
