--- a/loginSign.html
+++ b/loginSign.html
@@ -48,7 +48,7 @@
 
 
       <p class="sign-up-label">
-        Already have an account?<span class="sign-up-link"><a href="login.html">Sign up</a></span>
+        Already have an account?<span class="sign-up-link"><a href="login.html">Sign In</a></span>
       </p>
       
      
