--- a/loginSign.html
+++ b/loginSign.html
@@ -44,7 +44,7 @@
     
 </form> 
 
-<button class="form-btn" type="button" onClick="feedBack()"><b>Create Account</b></button>
+<button class="form-btn" type="button" onClick="signUpFirebase()"><b>Create Account</b></button>
 
 
       <p class="sign-up-label">
