--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="assets.css">
 	<link rel="stylesheet" href="infoLay.css">
 	<script src="map.js"></script>
+	<script src="appNewFeedback.js"></script>
 	<script src="script.js"></script>
    <style>
 	   @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
@@ -46,7 +47,7 @@
   <div class="dropdown-content">
   <p class="optns" onClick="dashb()">Dashboard</p>
   <p class="optns" onClick="startTrk()">Start Tracking</p>
-  <p class="optns" onClick="trkResults()">Tracking Results</p>
+  <p class="optns" onClick="feedBack()">Tracking Results</p>
   </div>
 </div>
 
