--- a/Results/resultsLameCha.html
+++ b/Results/resultsLameCha.html
@@ -3,6 +3,7 @@
 	<title>ResultsNew</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="Results/resultsNew.css">
 	<link rel="stylesheet" href="resultsNew.css">
    <style>
 	   @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
