--- a/main.html
+++ b/main.html
@@ -209,7 +209,7 @@ City/Village: ******
     
 </div>
        <script>
-	       function visa(){
+	       function visaPay(){
                    window.location.href=("visaPay.html");
 	       }
        </script>
@@ -218,7 +218,7 @@ City/Village: ******
 
     <div class="card__btns">
         <button class="add-btn">+</button>
-        <button class="watch-btn22" href="visaPay.html">Unlock Intel</button>
+        <button class="watch-btn22" onClick="visaPay()">Unlock Intel</button>
     </div>
 	  
  </div><!---btm3--->
