--- a/main.html
+++ b/main.html
@@ -216,7 +216,7 @@ City/Village: ******
      </form>
 
 
-    <div class="card__btns">
+    <div class="card__btnss">
         <button class="add-btn">+</button>
         <button class="watch-btn22" onClick="visaPay()">Unlock Intel</button>
     </div>
