--- a/visaPay.html
+++ b/visaPay.html
@@ -149,7 +149,7 @@
 
 
 
-<div id="snackbar"> Payment cannot be processed.Please pay with PayPal or through an agent..</div>
+<div id="snackbar"> Payment cannot be processed. Email cellhunterapp@gmail.com to process payment...</div>
 
 
 
