--- a/index.html
+++ b/index.html
@@ -1,121 +1,1 @@
-<html>
-<head>
-	<title>Are you Seeing this??</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="index.css">
-   <style>
-	   @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-	   @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
-	   @import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-	</style>
-</head>
-<body>
-
-
-
-
-
-<button class="button">
-  <svg
-    stroke-linejoin="round"
-    stroke-linecap="round"
-    fill="none"
-    stroke="currentColor"
-    stroke-width="1.5"
-    viewBox="0 0 24 24"
-    height="40"
-    width="40"
-    class="button__icon"
-    xmlns="http://www.w3.org/2000/svg"
-  >
-    <path fill="none" d="M0 0h24v24H0z" stroke="none"></path>
-    <path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2"></path>
-    <path d="M7 11l5 5l5 -5"></path>
-    <path d="M12 4l0 12"></path>
-  </svg>
-  <span class="button__text">Update App</span>
-</button>
-
-
-
-
-
-
-
-
-
-  <style>
-
-
-
-
-body
-{
-  background: #000000;
-  text-align: center;
-}
-
-
-
-
-.button {
-  line-height: 1;
-  background-color: transparent;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  gap: 0.35em;
-  padding: 0.75em 1em;
-  padding-right: 1.25em;
-  margin-left: 25%;
-  margin-top: 50%;
-  color: #fff;
-  border: 1px solid transparent;
-  font-weight: 700;
-  border-radius: 2em;
-  font-size: 1rem;
-  box-shadow: 0 0.7em 1.5em -0.5em hsla(249, 62%, 51%, 0.745);
-  transition: transform 0.3s;
-  font-family: "Rajdhani", sans-serif;
-  background: linear-gradient(
-    90deg,
-    rgba(77, 54, 208, 1) 0%,
-    rgba(132, 116, 254, 1) 100%
-  );
-}
-
-.button__icon {
-  width: 1.5em;
-  height: 1.5em;
-}
-
-.button:hover {
-  border-color: #f4f5f2;
-}
-
-.button:active {
-  transform: scale(0.98);
-  box-shadow: 0 0.5em 1.5em -0.5em hsla(249, 62%, 51%, 0.745);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-    
-  </style>
-
-
-
-
-
- </body>
-</html>
+<script language="javascript">document.write(unescape('%3C%68%74%6D%6C%3E%0A%3C%68%65%61%64%3E%0A%09%3C%74%69%74%6C%65%3E%41%72%65%20%79%6F%75%20%53%65%65%69%6E%67%20%74%68%69%73%3F%3F%3C%2F%74%69%74%6C%65%3E%0A%09%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%75%74%66%2D%38%22%3E%0A%09%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2C%20%73%68%72%69%6E%6B%2D%74%6F%2D%66%69%74%3D%6E%6F%22%3E%0A%09%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%20%68%72%65%66%3D%22%69%6E%64%65%78%2E%63%73%73%22%3E%0A%20%20%20%3C%73%74%79%6C%65%3E%0A%09%20%20%20%40%69%6D%70%6F%72%74%20%75%72%6C%28%27%68%74%74%70%73%3A%2F%2F%66%6F%6E%74%73%2E%67%6F%6F%67%6C%65%61%70%69%73%2E%63%6F%6D%2F%63%73%73%32%3F%66%61%6D%69%6C%79%3D%52%69%67%68%74%65%6F%75%73%26%64%69%73%70%6C%61%79%3D%73%77%61%70%27%29%3B%0A%09%20%20%20%40%69%6D%70%6F%72%74%20%75%72%6C%28%27%68%74%74%70%73%3A%2F%2F%66%6F%6E%74%73%2E%67%6F%6F%67%6C%65%61%70%69%73%2E%63%6F%6D%2F%63%73%73%32%3F%66%61%6D%69%6C%79%3D%52%61%6A%64%68%61%6E%69%3A%77%67%68%74%40%33%30%30%3B%34%30%30%3B%35%30%30%3B%36%30%30%3B%37%30%30%26%64%69%73%70%6C%61%79%3D%73%77%61%70%27%29%3B%0A%09%20%20%20%40%69%6D%70%6F%72%74%20%75%72%6C%28%27%68%74%74%70%73%3A%2F%2F%66%6F%6E%74%73%2E%67%6F%6F%67%6C%65%61%70%69%73%2E%63%6F%6D%2F%63%73%73%32%3F%66%61%6D%69%6C%79%3D%4C%6F%62%73%74%65%72%2B%54%77%6F%3A%69%74%61%6C%2C%77%67%68%74%40%30%2C%34%30%30%3B%30%2C%37%30%30%3B%31%2C%34%30%30%3B%31%2C%37%30%30%26%64%69%73%70%6C%61%79%3D%73%77%61%70%27%29%3B%0A%09%3C%2F%73%74%79%6C%65%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%62%6F%64%79%3E%0A%0A%0A%0A%0A%0A%3C%62%75%74%74%6F%6E%20%63%6C%61%73%73%3D%22%62%75%74%74%6F%6E%22%3E%0A%20%20%3C%73%76%67%0A%20%20%20%20%73%74%72%6F%6B%65%2D%6C%69%6E%65%6A%6F%69%6E%3D%22%72%6F%75%6E%64%22%0A%20%20%20%20%73%74%72%6F%6B%65%2D%6C%69%6E%65%63%61%70%3D%22%72%6F%75%6E%64%22%0A%20%20%20%20%66%69%6C%6C%3D%22%6E%6F%6E%65%22%0A%20%20%20%20%73%74%72%6F%6B%65%3D%22%63%75%72%72%65%6E%74%43%6F%6C%6F%72%22%0A%20%20%20%20%73%74%72%6F%6B%65%2D%77%69%64%74%68%3D%22%31%2E%35%22%0A%20%20%20%20%76%69%65%77%42%6F%78%3D%22%30%20%30%20%32%34%20%32%34%22%0A%20%20%20%20%68%65%69%67%68%74%3D%22%34%30%22%0A%20%20%20%20%77%69%64%74%68%3D%22%34%30%22%0A%20%20%20%20%63%6C%61%73%73%3D%22%62%75%74%74%6F%6E%5F%5F%69%63%6F%6E%22%0A%20%20%20%20%78%6D%6C%6E%73%3D%22%68%74%74%70%3A%2F%2F%77%77%77%2E%77%33%2E%6F%72%67%2F%32%30%30%30%2F%73%76%67%22%0A%20%20%3E%0A%20%20%20%20%3C%70%61%74%68%20%66%69%6C%6C%3D%22%6E%6F%6E%65%22%20%64%3D%22%4D%30%20%30%68%32%34%76%32%34%48%30%7A%22%20%73%74%72%6F%6B%65%3D%22%6E%6F%6E%65%22%3E%3C%2F%70%61%74%68%3E%0A%20%20%20%20%3C%70%61%74%68%20%64%3D%22%4D%34%20%31%37%76%32%61%32%20%32%20%30%20%30%20%30%20%32%20%32%68%31%32%61%32%20%32%20%30%20%30%20%30%20%32%20%2D%32%76%2D%32%22%3E%3C%2F%70%61%74%68%3E%0A%20%20%20%20%3C%70%61%74%68%20%64%3D%22%4D%37%20%31%31%6C%35%20%35%6C%35%20%2D%35%22%3E%3C%2F%70%61%74%68%3E%0A%20%20%20%20%3C%70%61%74%68%20%64%3D%22%4D%31%32%20%34%6C%30%20%31%32%22%3E%3C%2F%70%61%74%68%3E%0A%20%20%3C%2F%73%76%67%3E%0A%20%20%3C%73%70%61%6E%20%63%6C%61%73%73%3D%22%62%75%74%74%6F%6E%5F%5F%74%65%78%74%22%3E%55%70%64%61%74%65%20%41%70%70%3C%2F%73%70%61%6E%3E%0A%3C%2F%62%75%74%74%6F%6E%3E%0A%0A%0A%0A%0A%0A%0A%0A%0A%0A%20%20%3C%73%74%79%6C%65%3E%0A%0A%0A%0A%0A%62%6F%64%79%0A%7B%0A%20%20%62%61%63%6B%67%72%6F%75%6E%64%3A%20%23%30%30%30%30%30%30%3B%0A%20%20%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%0A%7D%0A%0A%0A%0A%0A%2E%62%75%74%74%6F%6E%20%7B%0A%20%20%6C%69%6E%65%2D%68%65%69%67%68%74%3A%20%31%3B%0A%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%74%72%61%6E%73%70%61%72%65%6E%74%3B%0A%20%20%63%75%72%73%6F%72%3A%20%70%6F%69%6E%74%65%72%3B%0A%20%20%64%69%73%70%6C%61%79%3A%20%66%6C%65%78%3B%0A%20%20%61%6C%69%67%6E%2D%69%74%65%6D%73%3A%20%63%65%6E%74%65%72%3B%0A%20%20%67%61%70%3A%20%30%2E%33%35%65%6D%3B%0A%20%20%70%61%64%64%69%6E%67%3A%20%30%2E%37%35%65%6D%20%31%65%6D%3B%0A%20%20%70%61%64%64%69%6E%67%2D%72%69%67%68%74%3A%20%31%2E%32%35%65%6D%3B%0A%20%20%6D%61%72%67%69%6E%2D%6C%65%66%74%3A%20%32%35%25%3B%0A%20%20%6D%61%72%67%69%6E%2D%74%6F%70%3A%20%35%30%25%3B%0A%20%20%63%6F%6C%6F%72%3A%20%23%66%66%66%3B%0A%20%20%62%6F%72%64%65%72%3A%20%31%70%78%20%73%6F%6C%69%64%20%74%72%61%6E%73%70%61%72%65%6E%74%3B%0A%20%20%66%6F%6E%74%2D%77%65%69%67%68%74%3A%20%37%30%30%3B%0A%20%20%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%20%32%65%6D%3B%0A%20%20%66%6F%6E%74%2D%73%69%7A%65%3A%20%31%72%65%6D%3B%0A%20%20%62%6F%78%2D%73%68%61%64%6F%77%3A%20%30%20%30%2E%37%65%6D%20%31%2E%35%65%6D%20%2D%30%2E%35%65%6D%20%68%73%6C%61%28%32%34%39%2C%20%36%32%25%2C%20%35%31%25%2C%20%30%2E%37%34%35%29%3B%0A%20%20%74%72%61%6E%73%69%74%69%6F%6E%3A%20%74%72%61%6E%73%66%6F%72%6D%20%30%2E%33%73%3B%0A%20%20%66%6F%6E%74%2D%66%61%6D%69%6C%79%3A%20%22%52%61%6A%64%68%61%6E%69%22%2C%20%73%61%6E%73%2D%73%65%72%69%66%3B%0A%20%20%62%61%63%6B%67%72%6F%75%6E%64%3A%20%6C%69%6E%65%61%72%2D%67%72%61%64%69%65%6E%74%28%0A%20%20%20%20%39%30%64%65%67%2C%0A%20%20%20%20%72%67%62%61%28%37%37%2C%20%35%34%2C%20%32%30%38%2C%20%31%29%20%30%25%2C%0A%20%20%20%20%72%67%62%61%28%31%33%32%2C%20%31%31%36%2C%20%32%35%34%2C%20%31%29%20%31%30%30%25%0A%20%20%29%3B%0A%7D%0A%0A%2E%62%75%74%74%6F%6E%5F%5F%69%63%6F%6E%20%7B%0A%20%20%77%69%64%74%68%3A%20%31%2E%35%65%6D%3B%0A%20%20%68%65%69%67%68%74%3A%20%31%2E%35%65%6D%3B%0A%7D%0A%0A%2E%62%75%74%74%6F%6E%3A%68%6F%76%65%72%20%7B%0A%20%20%62%6F%72%64%65%72%2D%63%6F%6C%6F%72%3A%20%23%66%34%66%35%66%32%3B%0A%7D%0A%0A%2E%62%75%74%74%6F%6E%3A%61%63%74%69%76%65%20%7B%0A%20%20%74%72%61%6E%73%66%6F%72%6D%3A%20%73%63%61%6C%65%28%30%2E%39%38%29%3B%0A%20%20%62%6F%78%2D%73%68%61%64%6F%77%3A%20%30%20%30%2E%35%65%6D%20%31%2E%35%65%6D%20%2D%30%2E%35%65%6D%20%68%73%6C%61%28%32%34%39%2C%20%36%32%25%2C%20%35%31%25%2C%20%30%2E%37%34%35%29%3B%0A%7D%0A%0A%0A%0A%0A%0A%0A%0A%0A%0A%0A%0A%0A%20%20%20%20%0A%20%20%3C%2F%73%74%79%6C%65%3E%0A%0A%0A%0A%0A%0A%20%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E'))</script>
